// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterSection > matches snapshot when collapsed 1`] = `
<DocumentFragment>
  <div
    class="w-full"
    data-orientation="vertical"
  >
    <div
      class="border-b"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        class="flex"
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:r1:"
          aria-expanded="false"
          class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:r0:"
          type="button"
        >
          <p>
            Genre
            <span
              class="opacity-60"
            >
               (1 applied)
            </span>
          </p>
          <svg
            class="lucide lucide-chevron-down h-4 w-4 shrink-0 transition-transform duration-200"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r0:"
        class="max-h-40 overflow-y-auto text-sm transition-all data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:r1:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FilterSection > matches snapshot when open 1`] = `
<DocumentFragment>
  <div
    class="w-full"
    data-orientation="vertical"
  >
    <div
      class="border-b"
      data-orientation="vertical"
      data-state="open"
    >
      <h3
        class="flex"
        data-orientation="vertical"
        data-state="open"
      >
        <button
          aria-controls="radix-:r3:"
          aria-expanded="true"
          class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="open"
          id="radix-:r2:"
          type="button"
        >
          <p>
            Genre
            <span
              class="opacity-60"
            >
               (1 applied)
            </span>
          </p>
          <svg
            class="lucide lucide-chevron-down h-4 w-4 shrink-0 transition-transform duration-200"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r2:"
        class="max-h-40 overflow-y-auto text-sm transition-all data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
        data-orientation="vertical"
        data-state="open"
        id="radix-:r3:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      >
        <div
          class="pb-4 pt-0"
        >
          <ul>
            <li
              class="mb-2 flex items-center space-x-2"
            >
              <button
                aria-checked="true"
                aria-label="Action"
                class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
                data-state="checked"
                id="Action"
                role="checkbox"
                type="button"
                value="on"
              >
                <span
                  class="flex items-center justify-center text-current"
                  data-state="checked"
                  style="pointer-events: none;"
                >
                  <svg
                    class="lucide lucide-check h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 6 9 17l-5-5"
                    />
                  </svg>
                </span>
              </button>
              <label
                class="text-sm font-medium leading-none hover:cursor-pointer"
                for="Action"
              >
                Action 
                <span
                  class="opacity-60"
                >
                  (150)
                </span>
              </label>
            </li>
            <li
              class="mb-2 flex items-center space-x-2"
            >
              <button
                aria-checked="false"
                aria-label="Comedy"
                class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
                data-state="unchecked"
                id="Comedy"
                role="checkbox"
                type="button"
                value="on"
              />
              <label
                class="text-sm font-medium leading-none hover:cursor-pointer"
                for="Comedy"
              >
                Comedy 
                <span
                  class="opacity-60"
                >
                  (100)
                </span>
              </label>
            </li>
            <li
              class="mb-2 flex items-center space-x-2"
            >
              <button
                aria-checked="false"
                aria-label="Drama"
                class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
                data-state="unchecked"
                id="Drama"
                role="checkbox"
                type="button"
                value="on"
              />
              <label
                class="text-sm font-medium leading-none hover:cursor-pointer"
                for="Drama"
              >
                Drama 
                <span
                  class="opacity-60"
                >
                  (120)
                </span>
              </label>
            </li>
            <li
              class="mb-2 flex items-center space-x-2"
            >
              <button
                aria-checked="false"
                aria-label="Thriller"
                class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
                data-state="unchecked"
                id="Thriller"
                role="checkbox"
                type="button"
                value="on"
              />
              <label
                class="text-sm font-medium leading-none hover:cursor-pointer"
                for="Thriller"
              >
                Thriller 
                <span
                  class="opacity-60"
                >
                  (90)
                </span>
              </label>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
